UI Pythagorean completa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,15 @@
         icon="pi pi-percentage"
         routerLink="/differences"
         pRipple
+        class="p-mr-2 p-mb-2"
       ></p-button>
       <p-button
         label="Pythagorean"
         icon="pi pi-sort-up"
         styleClass="p-button-success"
+        routerLink="/pythagorean"
         pRipple
+        class="p-mr-2 p-mb-2"
       ></p-button>
     </div>
   </p-toolbar>
