--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,13 @@
   <p-toolbar>
     <div class="p-toolbar-group-left">
       <p-button
+        label="Dashboard"
+        icon="pi pi-tablet"
+        routerLink="/dashboard"
+        pRipple
+        class="p-mr-2 p-mb-2"
+      ></p-button>
+      <p-button
         label="Differences"
         icon="pi pi-percentage"
         routerLink="/differences"
@@ -18,5 +25,5 @@
       ></p-button>
     </div>
   </p-toolbar>
-  <router-outlet></router-outlet>
+  <router-outlet> </router-outlet>
 </div>
